# Mentorlib-SME

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml  unit-tests.yml
alembic/: env.py
alembic/versions/: 0ec5c83f6511_removed_year_shortname_columns_for_.py  2a9abd3c5415_changed_default_value_for_date_in_.py  2fd6cb28097e_add_course_description_column.py  5c1b5ecc33fd_added_comments_table_to_allow_comment_.py  73dae9a47e58_.py  95d8413fb55d_ajout_colonne_description.py  99b3210c8006_add_admin_column.py  9d554bc90adf_added_usernote_table.py  b613b6af9f4c_première_migration.py  beefa64eedab_added_status_column_to_course.py  f5b1a7f82d94_ajout_de_la_colonne_bannière_pour_les_.py
serveur/: run.py
serveur/app/: __init__.py  config_template.ini
serveur/app/course/: models.py  schemas.py
serveur/app/routes/: course.py  user.py
serveur/app/user/: models.py  schemas.py  validators.py
src/mentorlib_sme/: __init__.py  main.py  settings.py
src/mentorlib_sme/course/: models.py  schemas.py  validators.py
src/mentorlib_sme/routes/: admin.py  comment.py  course.py  user.py
src/mentorlib_sme/user/: models.py  schemas.py  validators.py
